--- a/practicas de clase/responsive/responsive2.html
+++ b/practicas de clase/responsive/responsive2.html
@@ -3,12 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Responsive</title>
-    <link rel="stylesheet" href="css/jquery.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
    
-<div #nav >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate pariatur, dolorem, porro ea quia eveniet tempora laudantium omnis deleniti, explicabo quibusdam deserunt libero distinctio! Ipsum eligendi, quo harum pariatur repellat.</div>
-<div #nav >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem dolores, unde corporis. Ex sapiente facere in, beatae, similique iste dolore libero expedita natus sunt voluptatibus earum, mollitia delectus ullam molestias!</div> 
-<div #nav >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem dolores, unde corporis. Ex sapiente facere in, beatae, similique iste dolore libero expedita natus sunt voluptatibus earum, mollitia delectus ullam molestias!</div>    
+<div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate pariatur, dolorem, porro ea quia eveniet tempora laudantium omnis deleniti, explicabo quibusdam deserunt libero distinctio! Ipsum eligendi, quo harum pariatur repellat.</div>
+<div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem dolores, unde corporis. Ex sapiente facere in, beatae, similique iste dolore libero expedita natus sunt voluptatibus earum, mollitia delectus ullam molestias!</div> 
+<div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem dolores, unde corporis. Ex sapiente facere in, beatae, similique iste dolore libero expedita natus sunt voluptatibus earum, mollitia delectus ullam molestias!</div>    
 </body>
 </html>
